Fixed bugs in public folder, acc lay, prim lay.

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -19,4 +19,4 @@
     crossorigin="anonymous"></script>
 </body>
 
-</html lang="en"> <!--Possibly fixes the bug?-->
+</html>
